Mon Jun 30 22:30:37 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/test/unit/collector/dir.rb (recursive_collect): r15662 reverted.

Mon Jun 30 22:27:39 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* ext/stringio/stringio.c (strio_getline): fix for nil and "" as
	  separator.  [ruby-dev:34591]

Mon Jun 30 22:21:30 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* io.c (argf_each_line): pass args to each_line. [ruby-dev:34958]

Mon Jun 30 22:12:46 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (chain_finalized_object): should not delete from finalizer
	  table until run.

	* gc.c (rb_gc_call_finalizer_at_exit): deferred_final_list may be
	  empty first.

Mon Jun 30 18:57:05 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (gc_finalize_deferred): allow object allocation in finalizers.

	* gc.c (rb_gc_call_finalizer_at_exit): ditto.

Mon Jun 30 14:41:36 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* gc.c (rb_newobj): prohibit call of rb_newobj() during gc when
	  USE_VALUE_CACHE is not defined (normal case).

Mon Jun 30 10:28:33 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/syslog/syslog.c (syslog_write): syslog operations should be
	  protected from $SAFE level 4.  a patch from Keita Yamaguchi
	  <keita.yamaguchi at gmail.com>.

	* ext/syslog/syslog.c (mSyslog_close): ditto.

	* ext/syslog/syslog.c (mSyslog_set_mask): ditto.

Mon Jun 30 03:01:35 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/net/http/test_http.rb (_test_request__file): specify encoding
	  explicitly.

	* test/net/http/utils.rb: ditto.

Mon Jun 30 02:31:07 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* encoding.c (rb_utf8_encindex): defined.

	* include/ruby/encoding.h (rb_utf8_encindex): ditto.

Mon Jun 30 02:14:34 2008  Koichi Sasada  <ko1@atdot.net>

	* vm.c, vm_core.h,vm_core.h, vm_dump.c, iseq.c: rename class name
	  VM -> RubyVM, and rename rb_cVM -> rb_cRubyVM.
	  "VM" is too short name for class.

	* test/ruby/test_method.rb, test/ruby/test_settracefunc.rb: ditto.
